# Poce

./: .gitignore  App.cpp  App.h  Buffer.h  CMakeLists.txt  FaceDetector.cpp  FaceDetector.h  OShader.cpp  OShader.h  OShaderProgram.cpp  OShaderProgram.h  Pipfile  Readme.adoc  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VideoSource.cpp  VideoSource.h  VideoSurface.cpp  VideoSurface.h  VideoTexture.cpp  VideoTexture.h  Window.cpp  Window.h  fontexample.cpp  fontexample.cpp_off  gltest.cpp  gltypemap.cpp  gltypemap.h  glwrap.h  main.cpp  main_cam.cpp  main_dlib.cpp  monitoring.h  poce.py  profiler.cpp  profiler.h  (+2 more)
Poce/: PoceGame.cpp  PoceGame.h  TestTest.cpp  TestTest.h
cmake/: box2d-external.cmake  box2dpatch.cmake
glad/: README
glad/include/glad/: glad.h
glad/src/: glad.c
shaders/: simple.f.glsl  simple.v.glsl
src/: downloader.py  pongConfig.py  pongFaceDetector.py  pongGame.py  pongPhysics.py  pongRenderer.py
